deployADDC/azuredeploy.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "domainName": {
      "type": "string",
      "defaultValue": "camdomain.com",
      "metadata": {
        "description": "The FQDN of the Active Directory Domain to be created"
      }
    },
    "adminUser": {
      "type": "string",
      "defaultValue": "dcAdminUser",
      "metadata": {
        "description": "The name of the administrator account of the new VM and domain"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "The password for the administrator account of the new VM and domain"
      }
    },
    "serviceAccountName": {
      "type": "string",
      "defaultValue": "svcJoiningDomain",
      "metadata": {
        "description": "The name of the service account to join computer to domain"
      }
    },
    "serviceAccountPassword": {
      "type": "securestring",
      "metadata": {
        "description": "The password for the service account to join computer to domain"
      }
    },
    "_artifactsLocation": {
      "type": "string",
      "metadata": {
        "description": "The location of resources, such as templates and DSC modules, that the template depends on"
      },
      "defaultValue": "https://raw.githubusercontent.com/teradici/deploy/master/samples"
    }
  },

  "variables": {
    "apiVersion": "2016-12-01",
    "vnetName": "vnet-CloudAccessManager",
    "vnetAddress": "10.0.0.0/16",
    "dcSubnetName": "Subnet-CloudAccessManager",
    "dcSubnetAddress": "10.0.0.0/24",
    "dcNicIPAddress": "10.0.0.4",
    "gwSubnetName": "Subnet-gateway",
    "gwSubnetAddress": "10.0.1.0/24",
    "vmSubnetName": "Subnet-vm",
    "vmSubnetAddress": "10.0.2.0/24",
    "vmName": "vm-dc",
    "nicName": "[concat(variables('vmName'), '-nic')]",
    "pipName": "[concat(variables('vmName'), '-pip')]",
    "domainNameLabel": "[tolower(replace(concat('dcdemo-', uniqueString(resourceGroup().id, resourceGroup().location)), '.',''))]",
    "hostDNSName": "[concat(variables('vmName'), '.', parameters('domainName'))]"
  },

  "resources": [
    {
      "type": "Microsoft.Resources/deployments",
      "name": "VNet",
      "apiVersion": "2016-02-01",
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(parameters('_artifactsLocation'), '/', 'vnet.json')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "virtualNetworkName": {
            "value": "[variables('vnetName')]"
          },
          "virtualNetworkAddressRange": {
            "value": "[variables('vnetAddress')]"
          },
          "dcSubnetName": {
            "value": "[variables('dcSubnetName')]"
          },
          "dcSubnetRange": {
            "value": "[variables('dcSubnetAddress')]"
          },
          "gwSubnetName": {
            "value": "[variables('gwSubnetName')]"
          },
          "gwSubnetRange": {
            "value": "[variables('gwSubnetAddress')]"
          },
          "vmSubnetName": {
            "value": "[variables('vmSubnetName')]"
          },
          "vmSubnetRange": {
            "value": "[variables('vmSubnetAddress')]"
          }
        }
      }
    },

    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('pipName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "[variables('domainNameLabel')]"
        }
      }
    },

    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "dcNSG",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "NSG - Domain Controller"
      },

      "properties": {
        "securityRules": [
          {
            "name": "rdp-rule",
            "properties": {
              "description": "Allow RDP Session",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "INTERNET",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "WinRM-rule1",
            "properties": {
              "description": "Allow PowerShell Remoting over HTTP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5985",
              "sourceAddressPrefix": "INTERNET",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "WinRM-rule2",
            "properties": {
              "description": "Allow PowerShell Remoting over HTTPs",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5986",
              "sourceAddressPrefix": "INTERNET",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 201,
              "direction": "Inbound"
            }
          }
        ]
      }
    },

    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('nicName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "VNet",
        "dcNSG",
        "[concat('Microsoft.Network/publicIPAddresses/', variables('pipName'))]"
      ],
      "properties": {
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'dcNSG')]"
        },

        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('pipName'))]"
              },
              "subnet": {
                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')),'/subnets/',variables('dcSubnetName'))]"
              },
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[variables('dcNicIPAddress')]"
            }
          }
        ]
      }
    },

    {
      "apiVersion": "2017-03-30",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('vmName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2_v2"
        },
        "osProfile": {
          "computerName": "[variables('vmName')]",
          "adminUsername": "[parameters('adminUser')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2016-Datacenter",
            "version": "latest"
          },
          "osDisk": {
            "name": "os-disk",
            "caching": "ReadWrite",
            "createOption": "FromImage"
          },
          "dataDisks": [
            {
              "name": "[concat(variables('vmName'), '-data-disk')]",
              "caching": "None",
              "diskSizeGB": 1023,
              "lun": 0,
              "createOption": "Empty"
            }
          ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
            }
          ]
        }
      },

      "resources": [
        {
          "type": "Microsoft.Compute/virtualMachines/extensions",
          "name": "[concat(variables('vmName'),'/CreateADForest')]",
          "apiVersion": "2017-03-30",
          "location": "[resourceGroup().location]",
          "dependsOn": [
            "[resourceId('Microsoft.Compute/virtualMachines', variables('vmName'))]"
          ],
          "properties": {
            "publisher": "Microsoft.Powershell",
            "type": "DSC",
            "typeHandlerVersion": "2.19",
            "autoUpgradeMinorVersion": true,
            "settings": {
              "ModulesUrl": "[concat(parameters('_artifactsLocation'), '/', 'Config-DC-CA.zip')]",
              "ConfigurationFunction": "Config-DC-CA.ps1\\ConfigDCCA",
              "Properties": {
                "DomainName": "[parameters('domainName')]",
                "AdminCreds": {
                  "UserName": "[parameters('adminUser')]",
                  "Password": "PrivateSettingsRef:AdminPassword"
                },
                "serviceAccountCreds": {
                  "UserName": "[parameters('serviceAccountName')]",
                  "Password": "PrivateSettingsRef:saPassword"
                }
              }
            },
            "protectedSettings": {
              "Items": {
                "AdminPassword": "[parameters('adminPassword')]",
                "saPassword": "[parameters('serviceAccountPassword')]"
              }
            }
          }
        },

        {
          "apiVersion": "2017-03-30",
          "type": "Microsoft.Compute/virtualMachines/extensions",
          "name": "[concat(variables('vmName'),'/CustomScriptExtension')]",
          "location": "[resourceGroup().location]",
          "dependsOn": [
            "[resourceId('Microsoft.Compute/virtualMachines', variables('vmName'))]",
            "[resourceId('Microsoft.Compute/virtualMachines/extensions', variables('vmName'), 'CreateADForest')]"
          ],
          "properties": {
            "publisher": "Microsoft.Compute",
            "type": "CustomScriptExtension",
            "typeHandlerVersion": "1.9",
            "autoUpgradeMinorVersion": true,
            "settings": {
              "fileUris": [
                "[concat(parameters('_artifactsLocation'), '/', 'ConfigureWinRM.ps1')]"
              ],
              "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -file ConfigureWinRM.ps1 ', variables('hostDNSName'), '  ',  parameters('serviceAccountName'), '  ',  parameters('_artifactsLocation') )]"
            }
          }
        }
      ]
    },

    {
      "apiVersion": "2016-02-01",
      "type": "Microsoft.Resources/deployments",
      "name": "UpdateVNetDNS",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines/extensions', variables('vmName'), 'CustomScriptExtension')]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(parameters('_artifactsLocation'), '/', 'vnet.json')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "virtualNetworkName": {
            "value": "[variables('vnetName')]"
          },
          "virtualNetworkAddressRange": {
            "value": "[variables('vnetAddress')]"
          },
          "dcSubnetName": {
            "value": "[variables('dcSubnetName')]"
          },
          "dcSubnetRange": {
            "value": "[variables('dcSubnetAddress')]"
          },
          "gwSubnetName": {
            "value": "[variables('gwSubnetName')]"
          },
          "gwSubnetRange": {
            "value": "[variables('gwSubnetAddress')]"
          },
          "vmSubnetName": {
            "value": "[variables('vmSubnetName')]"
          },
          "vmSubnetRange": {
            "value": "[variables('vmSubnetAddress')]"
          },
          "DNSServerAddress": {
            "value": [
              "[variables('dcNicIPAddress')]"
            ]
          }
        }
      }
    }
  ],

  "outputs": {
    "fqdn": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',variables('pipName'))).dnsSettings.fqdn]"
    }
  }
}
